servicek8s.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: igrow-backend-service
  name: igrow-backend-service
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: igrow-backend-service
  type: ClusterIP
status:
  loadBalancer: {}
